--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,9 @@
 /* HEADER SECTION */
 
+h7 {
+    font-size: 12px;
+}
+
 header {
     padding: 20px 0px;
     box-shadow: 0px 0px 0px 1px rgba(160, 160, 160, 0.2);
@@ -13,6 +17,7 @@ header {
     color:white;
     border-radius: 4px;
     padding: 5px 7px;
+    cursor: pointer;
 }
 
 
@@ -29,6 +34,9 @@ header .container {
     column-gap: 20px;
     align-items: center;
 }
+
+
+
 
 header .container .header-left {
     display: flex;
@@ -71,13 +79,13 @@ header .container .header-right {
     font-size: 1.2rem;
 }
 
-header .container .header-right i {
+header .container .header-right .fa-cart-shopping {
     cursor: pointer;
     position: relative;
     transition: 0.2s;
 }
 
-header .container .header-right i:hover {
+header .container .header-right .fa-cart-shopping:hover {
     color: #f6861f;
 }
 
